# OOCholmod

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  classoocholmod_1_1_config_singleton-members.html  classoocholmod_1_1_config_singleton.html  classoocholmod_1_1_dense_matrix-members.html  classoocholmod_1_1_dense_matrix.html  classoocholmod_1_1_factor-members.html  classoocholmod_1_1_factor.html  classoocholmod_1_1_o_o_c_exception-members.html  classoocholmod_1_1_o_o_c_exception.html  classoocholmod_1_1_sparse_matrix-members.html  classoocholmod_1_1_sparse_matrix.html  classoocholmod_1_1_sparse_matrix_iter-members.html  classoocholmod_1_1_sparse_matrix_iter.html  config__singleton_8h_source.html  cpp14_8h_source.html  dense__matrix_8h_source.html  dir_5f9169aa67f2e967ef588163ac1a1058.html  dir_787fb6e62f54d0ab1012283069b8317f.html  factor_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  oo__blas_8h_source.html  oo__lapack_8h_source.html  ooc__exception_8h_source.html  premake4.lua  sparse__matrix_8h_source.html
example/: main.cpp
project/: ooc_exception.inc
search/: all_1.js  all_2.js  all_6.js  all_66.js  all_70.js  all_73.js  classes_3.js  classes_4.js  classes_64.js  classes_73.js  functions_1.js  functions_61.js  functions_67.js  functions_6e.js  functions_70.js  functions_73.js  search.js
src/: CMakeLists.txt  CholmodDenseVector.cpp  CholmodDenseVector.h  CholmodFactor.cpp  CholmodFactor.h  CholmodSparse.cpp  CholmodSparse.h  Makefile  blas.cpp  config_singleton.cpp  config_singleton.h  config_singleton.inc  cpp14.h  dense_cmatrix.cpp  dense_cmatrix.h  dense_matrix.cpp  dense_matrix.h  dense_matrix.inc  dense_vector.cpp  dense_vector.h  factor.cpp  factor.h  factor.inc  lapack.cpp  make.inc  oo_blas.cpp  oo_blas.h  oo_lapack.cpp  oo_lapack.h  ooc_exception.cpp  ooc_exception.h  sparse_matrix.cpp  sparse_matrix.h  sparse_matrix.inc
test/: CMakeLists.txt  main.cpp  objects.h  oocholmodtest.cpp  oocholmodtest.h  raw_ptr.h  testsuite.cpp  unique_ptr.h
