# CMakeLists of OOCholmod test
file(GLOB_RECURSE INCS "*.h")
file(GLOB_RECURSE SRCS "*.cpp")
add_executable(ooholdmod_unittest  ${SRCS} ${INCS})
target_link_libraries (ooholdmod_unittest ooholdmod)

 if (CHOLMOD_LIBRARY)
	target_link_libraries(ooholdmod_unittest "${CHOLMOD_LIBRARY}")
 endif ()
 if (USE_ACML)
	set_property( TARGET ooholdmod_unittest PROPERTY COMPILE_DEFINITIONS USE_ACML=1 )
	if (ACML_LIBRARY)
		TARGET_LINK_LIBRARIES(ooholdmod_unittest "${ACML_LIBRARY}")
	endif()
else (USE_ACML)
	if (ACML_LIBRARY)
		TARGET_LINK_LIBRARIES(ooholdmod_unittest "${BLAS_LIBRARY}")
	endif ()
	if (LAPACK_LIBRARY)
		TARGET_LINK_LIBRARIES(ooholdmod_unittest "${LAPACK_LIBRARY}")
	endif ()
endif (USE_ACML)
if (EXTRA_LIBS)
	TARGET_LINK_LIBRARIES( ooholdmod_unittest ${EXTRA_LIBS} )
endif (EXTRA_LIBS)